implementation crud produit

--- a/trial/src/main/resources/application.properties
+++ b/trial/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=trial
+
+# Configuration de la BDD H2
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Acceder a la console H2 (http://localhost:8080/h2-console)
+spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+
+
+
+
+
